# dig-this-shovel-talk

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt
bundles/: databricks.yml
bundles/src/: bronze_silver_pipeline.py  data_quality_check.py  shovelsense_pipeline.py
dialectics/shovelsense-roi/: presentation.html  round_1_candidate_F_framing.md  round_1_candidate_G_ground.md  round_1_candidate_S_synthesis.md  round_1_context_briefing.md  round_1_determinate_negation.md  round_1_monk_a_believer.md  round_1_monk_b_skeptic.md  round_1_validation_S_G.md  round_2_direction_A_technology_comparison.md  round_2_direction_D_sensor_architecture.md  round_2_synthesis.md  round_3_direction_B_blast_hole_optimization.md  round_3_direction_C_economic_model.md  round_3_direction_D_implementation_failures.md  round_3_synthesis.md
docs/: data-architecture.md  paper-analysis.md  pipeline-documentation.md
docs/analysis/: 00-critical-assessment-summary.md  01-openmines-analysis.md  02-deep-rl-fleet-analysis.md  03-vrp-heuristics-analysis.md  04-fleet-mix-ev-analysis.md  05-deep-learning-iiot-analysis.md  06-iiot-smart-manufacturing-analysis.md  07-rock-classification-analysis.md  08-blockchain-ai-iiot-analysis.md  09-digital-transformation-analysis.md
docs/presentations/: framing.md
docs/references/: README.md
integrations/fizzy-webhooks/: .env.example  README.md  github_sync.py  webhook_receiver.py  whatsapp_notify.py
scripts/: apply_table_metadata.py  generate_mining_data.py  generate_pdfs.py  setup_databricks.py
tasks/: project-management.md  todo.md
(+2 files in other folders)
