[project]
name = "automated-smart-truck-diversion"
version = "0.1.0"
description = "Critical analysis and synthetic data for XRF-based ore sorting systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-sdk>=0.28.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "faker>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
